--- a/service/static/index.html
+++ b/service/static/index.html
@@ -95,7 +95,7 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-offset-1 col-sm-1">
-                  <button type="submit" class="btn btn-primary" id="search-btn" >Search</button>
+                  <button type="submit" class="btn btn-primary" id="search-btn" style="float: right;">Search</button>
                 </div>
                 <div class="col-sm-1">
                   <button type="submit" class="btn btn-primary" id="clear-btn" style="float: right;">Clear</button>
